加入线程池、密码加密