@@ -1,17 +1,17 @@
 package cn.albumenj.util;
 
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 
-public class passwordDecode {
+public class PasswordDecode {
     public static String EncoderByMd5(String str){
         try {
             MessageDigest md5 = MessageDigest.getInstance("MD5");
-            BASE64Encoder base64en = new BASE64Encoder();
-            String newstr = base64en.encode(md5.digest(str.getBytes("utf-8")));
+            byte[] strb = md5.digest(str.getBytes("utf-8"));
+            String newstr = new String(Base64.getEncoder().encode(strb));
             return newstr;
         }catch (Exception e){
             e.printStackTrace();
